--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+	id 'com.palantir.docker' version '0.22.1'
 	id 'java'
 }
 
@@ -32,4 +33,24 @@ dependencyManagement {
 
 test {
 	useJUnitPlatform()
+}
+/*// Esto es formato recomendado
+task unpack(type: Copy) {
+    dependsOn bootJar
+    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+    into("build/dependency")
+}
+
+docker {
+    name "localhost:5000/service_discovery:latest"
+    copySpec.from(tasks.unpack.outputs).into("dependency")
+    buildArgs(['DEPENDENCY': "dependency"])
+}
+*/
+
+//Este es mi formato
+docker {
+    name "localhost:5000/service_discovery:latest"
+    copySpec.from("build/libs/serviceDiscovery-0.0.1-SNAPSHOT.jar").into("app")
+    buildArgs(['DEPENDENCY': "app"])
 }
