--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.0.RELEASE'
+	id 'org.springframework.boot' version '2.2.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'com.palantir.docker' version '0.22.1'
 	id 'java'
@@ -15,7 +15,7 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "Hoxton.RC1")
+	set('springCloudVersion', "Hoxton.SR1")
 }
 
 dependencies {
