changes in comments of build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -34,19 +34,17 @@ dependencyManagement {
 test {
 	useJUnitPlatform()
 }
-/*// Esto es formato recomendado
-task unpack(type: Copy) {
-    dependsOn bootJar
-    from(zipTree(tasks.bootJar.outputs.files.singleFile))
-    into("build/dependency")
-}
-
-docker {
-    name "localhost:5000/service_discovery:latest"
-    copySpec.from(tasks.unpack.outputs).into("dependency")
-    buildArgs(['DEPENDENCY': "dependency"])
-}
-*/
+// Esto es formato recomendado
+//task unpack(type: Copy) {
+//    dependsOn bootJar
+//    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+//    into("build/dependency")
+//}
+//docker {
+//    name "localhost:5000/service_discovery:latest"
+//    copySpec.from(tasks.unpack.outputs).into("dependency")
+//    buildArgs(['DEPENDENCY': "dependency"])
+//}
 
 //Este es mi formato
 docker {
